@@ -20,7 +20,9 @@ as are the following DOM elements:
 </ul>
 <h4>methods</h4>
 <ul>
-<li>alert() - queues up an alert message, accessible via WebResponse.getNextAlert() or popNextAlert()</li>
+<li>alert()   - queues up an alert message, accessible via WebResponse.getNextAlert() or popNextAlert()</li>
+<li>confirm() - invokes a callback supplied via WebClient.setDialogResponder to return the user's response</li>
+<li>prompt() - invokes a callback supplied via WebClient.setDialogResponder to return the user's response</li>
 </ul>
 
 <h3>Document</h3>
